<resources>
    <string name="app_name">Dose Calculator</string>
    <string name="results_of_calculations_will_be_shown_here">Results of calculations will be shown here</string>
    <string name="choose_the_active_substance">Choose the active substance</string>
    <string name="ibuprofen">Ibuprofen</string>
    <string name="paracetamol">Paracetamol</string>
    <string name="enter_medicine_concentration">Enter medicine concentration</string>
    <string name="substance_mg">Substance [mg]</string>
    <string name="medicine_ml">Medicine [ml]</string>
    <string name="enter_body_weight">Enter body weight</string>
    <string name="weight_kg">Weight [kg]</string>
    <string name="calculate">Calculate</string>
    <string name="this_field_cannot_be_blank">This field cannot be blank</string>
    <string name="incorrect_input">Incorrect input</string>
    <string name="result_warning">
        <b>Note: The following calculations are for information purposes only and do not
            constitute medical advice.
        </b>
    </string>
    <string name="substance_concentration_help">Read the concentration of the active substance from the drug packaging.
        \nThen fill in the fields below for information on how many milligrams of the active substance is in the given
        number of milliliters of syrup.\nFor example: 40 mg of substance per 1 ml of syrup.
    </string>
    <string name="get_more_info_about_substance_concetration">Get more info about substance concentration</string>
    <string name="about">About</string>
    <string name="change_theme">Change theme</string>
    <string name="warning_informational">All calculations are for informational purposes only and do not constitute
        medical advice.
    </string>
    <string name="app_based_on">Application is based on online calculator that You can find here:
        <a href="https://mamaistetoskop.pl/">https://mamaistetoskop.pl</a>, originally made by
        <a href="https://github.com/wozniakm">Mateusz Woźniak</a>
    </string>

    <!-- Calculations output -->
    <!-- Remember that the maximum permitted daily dose of ${medicine.name} for an adult is $medicineDailyMaxMg mg. -->
    <string name="calc_output_daily_dose_adult">Remember that the maximum permitted daily dose of %1$s for an adult is
        %2$s mg.
    </string>
    <string name="calc_output_ibuprofen">\nLarger doses of the drug can be taken only under the supervision and at the
        request of a doctor.
    </string>
    <!-- "${result.medicineMinMl} ml (equivalent to ${result.medicineMinMg} mg of ${result.medicineName})"-->
    <string name="single_dose_value_template">%1$s ml (equivalent to %2$s mg of %3$s)</string>
    <!-- "${result.medicineDailyMinMl} ml (equivalent to ${result.medicineDailyMinMg} mg of ${result.medicineName})"-->
    <string name="daily_dose_value_template">%1$s ml (equivalent to %2$s mg of %3$s</string>
    <!-- "${result.medicineMinMl}-${result.medicineMaxMl} ml (equivalent to ${result.medicineMinMg}-
    ${result.medicineMaxMg} mg of ${result.medicineName})" -->
    <string name="single_dose_section_template">%1$s-%2$s ml (equivalent to %3$s-%4$s mg of %5$s</string>
    <!-- "${result.medicineDailyMinMl}-${result.medicineDailyMaxMl} ml (equivalent to ${result.medicineDailyMinMg}-
     ${result.medicineDailyMaxMg} mg of ${result.medicineName})" -->
    <string name="daily_dose_section_template">%1$s-%2$s ml (equivalent to %3$s-%4$s mg of %5$s</string>
    <!-- "You can take ${result.medicineCount} such doses within 24 hours." -->
    <string name="output_number_of_doses">You can take %1$s such doses within 24 hours.</string>
    <string name="single_dose">Single dose</string>
    <string name="daily_dose">Daily dose</string>
    <string name="close">Close</string>

    <string name="good_morning">Good morning!</string>
    <string name="good_afternoon">Good afternoon!</string>
    <string name="good_evening">Good evening!</string>
    <string name="good_day">Good day!</string>
    <string name="help_weight_info">Enter the weight of the person who is going to take the medicine.</string>
    <string name="calculate_doses">Calculate doses</string>
    <string name="url_mama_i_stetoskop" translatable="false">https://mamaistetoskop.pl/</string>

    <!-- About bottom sheet -->
    <string name="github_omisie" translatable="false">OMIsie11 GitHub</string>
    <string name="github_url_omisie11" translatable="false">https://github.com/OMIsie11</string>
    <string name="twitter" translatable="false">Twitter</string>
    <string name="twitter_url_omisie11" translatable="false">https://twitter.com/omisie11</string>
    <string name="app_dev_info">Application made by Oskar Misiewicz
        (OMIsie11), You can find me here:
    </string>
    <string name="omisie11_website">Website</string>
    <string name="url_omisie11_website" translatable="false">https://omisie11.github.io</string>
    <string name="mamaistetoskop_pl" translatable="false">mamaistetoskop.pl</string>
    <string name="mateusz_wozniak_github" translatable="false">Mateusz Woźniak GitHub</string>
    <string name="url_mateusz_wozniak_github" translatable="false">https://github.com/wozniakm</string>
    <string name="user_privacy_info">All data collected by application stay on Your device and is never shared or send
        to developer.\nI respect Your privacy.
    </string>
    <string name="privacy">Privacy</string>
</resources>
