<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
                android:id="@+id/card_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp">
            <TextView
                    android:id="@+id/text_result"
                    android:text="@string/results_of_calculations_will_be_shown_here"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="120dp"
                    android:gravity="center"
                    android:padding="16dp"
                    tools:text="Results of calculations will be shown here"/>
        </androidx.cardview.widget.CardView>

        <View
                android:id="@+id/divider"
                android:layout_width="395dp"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/card_result"
                android:layout_marginTop="8dp"/>
        <TextView
                android:id="@+id/textView7"
                android:text="@string/choose_the_active_substance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"/>

        <RadioGroup
                android:id="@+id/radio_group_medicine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/textView7"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp">

            <RadioButton
                    android:id="@+id/radio_ibuprofen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ibuprofen"/>

            <RadioButton
                    android:id="@+id/radio_paracetamol"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/paracetamol"/>
        </RadioGroup>

        <TextView
                android:id="@+id/textView8"
                android:text="@string/enter_medicine_concentration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/radio_group_medicine"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_substance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="160dp"
                android:hint="@string/substance_mg"
                app:layout_constraintTop_toBottomOf="@id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintEnd_toStartOf="@+id/textInputLayout_medicine">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_substance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusRight="@+id/edit_text_medicine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_medicine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="160dp"
                android:hint="@string/medicine_ml"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/textInputLayout_substance"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout_substance">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_medicine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:nextFocusDown="@+id/edit_text_mass"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
                android:id="@+id/textView9"
                android:text="@string/enter_body_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout_substance"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout_mass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="160dp"
                android:hint="@string/weight_kg"
                app:layout_constraintTop_toBottomOf="@id/textView9"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_mass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_calculate"
                android:text="@string/calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout_mass"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>