<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">


    <TextView
            android:id="@+id/textView"
            android:text="@string/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-condensed-light"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

    <TextView
            android:id="@+id/textView2"
            android:text="@string/warning_informational"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:maxWidth="320dp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>

    <View
            android:id="@+id/divider2"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"/>

    <TextView
            android:id="@+id/text_app_based_on"
            android:text="@string/app_based_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoLink="web"
            android:maxWidth="320dp"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"/>

</LinearLayout>